--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+*{
+  box-sizing: border-box;
+}
 body {
     background-color: #282c34;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .App {
@@ -114,8 +118,14 @@ body {
     text-align: left;
     list-style: none;
   }
-  
-  p {
+    
+  .message {
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  .message p {
     max-width: 500px;
     margin-bottom: 12px;
     line-height: 24px;
@@ -123,14 +133,16 @@ body {
     border-radius: 25px;
     position: relative;
     color: white;
-    text-align: center;
-  }
-  
-  .message {
+    text-align: left;
     display: flex;
-    align-items: center;
+    flex-direction: column;
   }
-  
+
+  .message span{
+    color: white;
+    font-size: .7em;
+    opacity: .7;
+  }
   
   .sent {
     flex-direction: row-reverse;
@@ -143,6 +155,10 @@ body {
   }
   .received p {
     background: #e5e5ea;
+    color: black;
+  }
+
+  .received span{
     color: black;
   }
   
